Add interrupt parent to device tree

--- a/arch/arm/boot/dts/imx6q-sabrelite.dts
+++ b/arch/arm/boot/dts/imx6q-sabrelite.dts
@@ -47,6 +47,9 @@
 / {
 	model = "Freescale i.MX6 Quad SABRE Lite Board";
 	compatible = "fsl,imx6q-sabrelite", "fsl,imx6q";
+
+	// Added interrupt parent to allow for asynchronous notifications.
+	interrupt-parent = <&intc>;
 };
 
 &sata {
